CMAKE_MINIMUM_REQUIRED(VERSION 3.13)

PROJECT(glew C)

SET(GLEW_NAME "glew")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

SET(HEADER_LIST
    include/GL/glew.h
    include/GL/glxew.h
    include/GL/wglew.h
)

SET(SOURCE_LIST
    src/glew.c
)

SOURCE_GROUP(${GLEW_NAME} FILES ${HEADER_LIST})
SOURCE_GROUP(${GLEW_NAME} FILES ${SOURCE_LIST})

ADD_DEFINITIONS(-DGLEW_STATIC)
ADD_LIBRARY(${GLEW_NAME} STATIC ${HEADER_LIST} ${SOURCE_LIST})

IF(APPLE)
    FIND_LIBRARY(AGL_FRAMEWORK AGL)
    FIND_LIBRARY(OPENGL_FRAMEWORK OpenGL)
    TARGET_LINK_LIBRARIES(${GLEW_NAME} PRIVATE ${AGL_FRAMEWORK})
    TARGET_LINK_LIBRARIES(${GLEW_NAME} PRIVATE ${OPENGL_FRAMEWORK})
ELSEIF(WIN32)
    TARGET_LINK_LIBRARIES(${GLEW_NAME} PRIVATE opengl32)
ENDIF()

INSTALL(DIRECTORY "${PROJECT_SOURCE_DIR}/include/" DESTINATION include)
INSTALL(TARGETS ${GLEW_NAME} RUNTIME DESTINATION bin LIBRARY DESTINATION lib	ARCHIVE DESTINATION lib)